<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TGOH</string>
    <string name="action_settings">Settings</string>
    <string name="Sign_In">Sign In</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="Username">UserName</string>
    <string name="Password">Password</string>
    <string name="back">Back</string>
    <string name="Selection">Choose Your Class:</string>
    <string name="btnRequestClass">Request New Class</string>
    <string name="ReminderLbl">Reminder</string>
    <string name="btnViewSchedule">View Schedule</string>
    <string name="Teacher_user_lbl">Enter Teacher\'s username:</string>
    <string name="class_selection_lbl">Select one of the available classes below:</string>
    <string name="submit_string">Submit</string>
    <string name="lblTeacherHomePage">Home Page</string>
    <string name="btnAnnouncements">Edit Announcements</string>
    <string name="btnNotifications">Notifications</string>
    <string name="btnQuiz">Make Quiz</string>
    <string name="btnLogOut">Log Out</string>
    <string name="password2">Confirm New Password</string>
    <string name="usertype">Are you a student or teacher?</string>
    <string name="studentlbl">Student</string>
    <string name="teacherlbl">Teacher</string>
    <string name="Announcementslbl">Announcements</string>
    <string name="lblCourseHomePage">Course Home Page</string>
    <string name="btnDeleteCourse">Delete This Course</string>
    <string name="lblTeacherCourseSelectionPage">Select Your Course:</string>
    <string name="btnCreateCourse">Create a New Course</string>
    <string name="lblEnterCourse">Enter Course Number (AAA.###)</string>
    <string name="lblPendingTeachers">Pending Teachers:</string>
    <string name="btnAccept">Accept</string>
    <string name="btnDeny">Deny</string>
    <string name="teachernotaccept">Add checked student(s)</string>
    <string name="teachernotdeny">"Deny checked student(s) "</string>
    <string name="teachernotopen">"Students awaiting approval to class"</string>
    <string name="show">Show Classes</string>
    <string name="Announcementslbl2">Important Announcements</string>
    <string name="lblSettings">Settings</string>
    <string name="btnNewPass">Change Password</string>
    <string name="btnDeleteUser">Delete Account</string>
    <string name="deleteindtruct">Touch an announcement to delete</string>
    <string name="AddAnnouncementslbl">Add</string>
    <string name="removeAnnouncementslbl">Remove Announcements</string>
    <string name="enterstring">Enter a new announcement here is click the \"Add\" button to add a new announcement.</string>
    <string name="removeannouncelbl">Click on an announcement below to remove it.</string>
</resources>
